# hogwild

./: .gitignore  README.md  configure.ac
src/: Makefile.am  PgHog.h  helpers.cpp  hw_correlation_behavioral.cpp  hw_correlation_behavioral.h  hw_shim.c  main.cpp  primitives.c  primitives.cpp  primitives.h
tests/: Makefile.am  check_correlation.cpp  check_primitives.c
