## Process this file with automake to produce Makefile.in

TESTS = check_primitives
check_PROGRAMS = check_primitives
check_primitives_SOURCES = check_primitives.c $(top_builddir)/src/primitives.h $(top_builddir)/src/primitives.c
check_primitives_CFLAGS = @CHECK_CFLAGS@
check_primitives_LDADD = @CHECK_LIBS@

